# matrix-authentication-service

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile_tchap  docker-bake.hcl
.github/workflows/: build.yaml  build_tchap.yaml
crates/cli/: Cargo.toml
crates/data-model/: Cargo.toml
crates/handlers/: Cargo.toml
crates/jose/: Cargo.toml
crates/keystore/: Cargo.toml
crates/oauth2-types/: Cargo.toml
crates/tchap/: Cargo.toml
crates/tchap-cli/: Cargo.toml  build.rs
crates/tchap-cli/src/: main.rs
crates/tchap/src/: identity_client.rs  lib.rs  test_utils.rs
docs/: config.schema.json
docs/reference/: configuration.md
frontend/: knip.config.ts  package-lock.json  package.json  vite.config.ts
frontend/locales/: en.json  fr.json
frontend/src/: tchap.css  templates.css
frontend/tchap/: vite.tchap.config.ts
playwright/: .env  .gitignore  init.sh  setup-hosts.sh
policies/: policy.wasm
policies/password/: password.rego  password_test.rego
policies/register/: identity.rego  register.rego  register_test.rego
policies/schema/: password_input.json  register_input.json
tchap/: .env.sample  README.md  README_TCHAP.md  build_conf.sh  config.local.dev.yaml  docker-compose.yml  pre-commit-check.sh  start-local-mas-hot-reload.sh  start-local-mas.sh  start-local-stack.sh  start-with-hot-reload.sh  test_admin.sh  test_rego.sh
tchap/conf/: config.template.yaml
tchap/playwright/: README.md  playwright.config.ts
templates/: app.html  base.html
templates/components/: field.html  password_field.html
templates/pages/: login.html
translations/: en.json  fr.json
(+52 files in other folders)
