[package]
name = "mas-tchap"
version = "0.1.0"
edition = "2021"
description = "Tchap-specific functionality for Matrix Authentication Service"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.75"
mas-data-model = { path = "../data-model" }
mas-storage = { path = "../storage" }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
