[package]
name = "tchap"
version = "0.1.0"
description = "Tchap-specific functionality for Matrix Authentication Service"
license = "MIT"
edition = "2024"


[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.44.2", features = ["time"] }
